--- a/.github/workflows/asp_dot_net.yml
+++ b/.github/workflows/asp_dot_net.yml
@@ -3,9 +3,9 @@ name: Deploy ASP.NET MVC App deploy to Azure Web App
 on: [push]
 
 env:
-  AZURE_WEBAPP_NAME: MyFirstAzureWebApp    # set this to your application's name
+  AZURE_WEBAPP_NAME: 'MyFirstAzureWebApp'    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: 'MyFirstAzureWebApp'      # set this to the path to your web app project, defaults to the repository root
-  NUGET_VERSION: '5.3'           # set this to the dot net version to use
+  NUGET_VERSION: '6.0'           # set this to the dot net version to use
 
 jobs:
   build-and-deploy:
