--- a/.github/workflows/enviro_setup_action.yml
+++ b/.github/workflows/enviro_setup_action.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:      #manual option for triggering
 
 env:
-  AZURE_WEBAPP_NAME: MyFirstAzureWebApp    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: 'MyFirstAzureWebApp'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_NAME: 'app-service-web-dotnet-get-started'    # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: 'app-service-web-dotnet-get-started'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1'           # set this to the dot net version to use
 
 jobs:
